# reckon

./: .gitignore  Cargo.toml  README.md  build-docs.dunesh  test.pl
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/reckon/: all.html  constant.COLORED_LOGO_1.html  constant.COLORED_LOGO_2.html  constant.COLORED_LOGO_3.html  constant.COLORED_LOGO_4.html  constant.LOGO_1.html  constant.LOGO_2.html  constant.LOGO_3.html  constant.LOGO_4.html  enum.Term.html  enum.Traversal.html  fn.eval.html  fn.int_to_peano.html  fn.peano_to_int.html  fn.time_it.html  fn.var.html  index.html  sidebar-items.js  struct.AppTerm.html  struct.DefaultSolver.html  struct.Env.html  struct.MemoizingSolver.html  struct.Query.html  struct.Rule.html  struct.SearchConfig.html  struct.Solution.html  struct.Symbol.html  struct.Var.html  trait.Solver.html
docs/reckon/env/: enum.Traversal.html  struct.Env.html  struct.SearchConfig.html  struct.Solution.html
docs/reckon/query/: struct.Query.html
docs/reckon/rule/: struct.Rule.html
docs/reckon/solvers/: struct.DefaultSolver.html  struct.MemoizingSolver.html  trait.Solver.html
docs/reckon/symbol/: struct.Symbol.html
docs/reckon/term/: enum.Term.html  fn.var.html  struct.AppTerm.html  struct.Var.html
docs/reckon/util/: fn.eval.html  fn.int_to_peano.html  fn.peano_to_int.html  fn.time_it.html
examples/: arithmetic.rk  system-f.rk
src/: env.rs  lib.rs  main.rs  parse.rs  query.rs  rule.rs  symbol.rs  term.rs
src/solvers/: dfs.rs  mod.rs  naive.rs  old-dfs.rs  old-naive.rs
src/util/: mod.rs
(+33 files in other folders)
