[package]
name = "reckon"
version = "0.1.0"
edition = "2021"
authors = ["Adam McDaniel <https://adam-mcdaniel.net>"]

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
egg = "0.10.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
nom = "7.1.3"
rustyline = "15.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
